@@ -1,5 +1,6 @@
-serd (0.22.4) unstable;
+serd (0.23.0) unstable;
 
+  * Add serd_node_new_relative_uri()
   * Fix construction and comparison of URIs with UTF-8 characters
   * Report I/O errors with message and return appropriate status code
   * Fix potential out of bounds read
@@ -7,7 +8,7 @@ serd (0.22.4) unstable;
   * Fix documentation generation
   * Update serdi man page
 
- -- David Robillard <d@drobilla.net>  Sat, 09 Jul 2016 11:27:45 -0400
+ -- David Robillard <d@drobilla.net>  Sun, 10 Jul 2016 18:55:37 -0400
 
 serd (0.22.0) stable;
 
